--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
       <div class="main-content">
         <h1 class="zone-name-title h1">
           <img
-            src="https://www.bankofamerica.com/homepage/spa-assets/images/assets-images-global-favicon-apple-touch-icon-CSX889b28c.png"
+            src="https://benefits.uc.pa.gov/vosnet/Handlers/Content/Images/Image.ashx?enc=O/WpIGk7WpR2sNtwetkpJw=="
             class="heading-favicon"
             alt="Icon for Pennsylvania uionline"
           />Pennsylvania uionline
