--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
       <div class="main-content">
         <h1 class="zone-name-title h1">
           <img
-            src="https://benefits.uc.pa.gov/vosnet/Handlers/Content/Images/Image.ashx?enc=O/WpIGk7WpR2sNtwetkpJw=="
+            src="https://logo.clearbit.com/pa.gov"
             class="heading-favicon"
             alt="Icon for Pennsylvania uionline"
           />Pennsylvania uionline
